tests/files/flow_controller_tests/should_run/104.cmdr
x = 10.8;
print arcsinh(x);