tests/files/flow_controller_tests/should_fail/042.cmdr
x = false;
print sin(x);